added page to set age & weight

--- a/codelab_app/pubspec.yaml
+++ b/codelab_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^4.0.4
   qr_code_scanner: ^0.0.12
+  shared_preferences: ^0.5.7
   openfoodfacts:
     git:
       url: https://github.com/openfoodfacts/openfoodfacts-dart
